fixed minor styling bug

--- a/Bingo Caller/style.css
+++ b/Bingo Caller/style.css
@@ -1,5 +1,5 @@
 body {
-background-image: url("../images/background.jpg");
+background-image: url("https://t4.ftcdn.net/jpg/03/36/58/43/360_F_336584393_44SroB1zIMM3oXI5sCcHMXinOqBdiAod.jpg");
 background-size:cover;
 background-repeat:no-repeat;
 height: 100%;
